--- a/olx-iphone.ipynb
+++ b/olx-iphone.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cb9b308a",
+   "id": "11581ff8",
    "metadata": {},
    "source": [
-    "# Projekt \"Analiza cen iPhone'ów na OLX\"\n",
+    "# Project \"Analysis of iPhone prices on OLX\"\n",
     "\n",
-    "W ramach projektu zbierzemy dane o sprzedaży iPhone'ów z serwisu OLX następnie zorientujemy się w średnich cenach za konkretna wersje i zasugerujemy najtansze telefony pod katem kazdej wersji\n",
+    "As part of the project, we will collect data on iPhone sales from the OLX website, then we will analyze the average prices for specific versions and suggest the cheapest phones for each version.\n",
     "\n",
-    "## Etap 1: Scrapowanie danych\n",
+    "## Stage 1: Scraping data\n",
     "\n",
-    "W pierwszej kolejności wykorzystamy technikę webscrapingu do pobrania ofert sprzedaży iPhone'ów z serwisu OLX. Do tego celu wykorzystamy bibliotekę Pythona - BeautifulSoup."
+    "First, we will use web scraping techniques to retrieve iPhone sales listings from the OLX website. For this purpose, we will use the Python library - BeautifulSoup."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9922a181",
+   "id": "a4c1d624",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,10 +191,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d839c1e8",
+   "id": "c465bcd0",
    "metadata": {},
    "source": [
-    "Z uwagi iż olx do wyszukanej frazy pokaże tylko 25 stron wyników to użyłem funckji parse_page wpisujac rozne wersje dla ciekawszej analizy. Oczywiście w dalszej czesci usuniemy powstałe przez to duplikaty/"
+    "Since OLX shows only 25 pages of results for a given search query, I used the parse_page function with different versions for a more interesting analysis. Of course, later we will remove the duplicates that resulted from this."
    ]
   },
   {
@@ -715,11 +715,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfb1d0e2",
+   "id": "eb385264",
    "metadata": {},
    "source": [
-    "## Etap 2: Czyszczenie i przygotowanie danych\n",
-    "Po pobraniu danych wykonamy ich analizę, dokonując czyszczenia i przygotowania ich do dalszej pracy. Usuniemy duplikaty, brakujące wartości, a także znormalizujemy niektóre dane."
+    "## Stage 2: Data Cleaning and Preparation\n",
+    "\n",
+    "After collecting the data, we will analyze it by cleaning and preparing it for further processing. We will remove duplicates, missing values, and normalize some of the data."
    ]
   },
   {
@@ -1477,19 +1478,19 @@
     }
    ],
    "source": [
-    "# Zliczanie wystąpień każdej wersji iPhone'a\n",
+    "# Counting occurrences of each iPhone version\n",
     "counts = df['Wersja Iphona'].value_counts()\n",
     "\n",
-    "# Wybieranie wersji iPhone'a, które występują co najmniej 100 razy\n",
+    "# Selecting iPhone versions that appear at least 100 times\n",
     "valid_versions = counts[counts >= 100].index\n",
     "\n",
-    "# Wybieranie wierszy, które zawierają niewłaściwe wersje iPhone'a\n",
+    "# Selecting rows that contain invalid iPhone versions\n",
     "invalid_rows = ~df['Wersja Iphona'].isin(valid_versions)\n",
     "\n",
-    "# Usuwanie wierszy zawierających niewłaściwe wersje iPhone'a\n",
+    "# Selecting rows that contain invalid iPhone versions\n",
     "df = df.drop(index=df[invalid_rows].index)\n",
     "\n",
-    "# Wyświetlanie wyniku\n",
+    "# Displaying the result\n",
     "df"
    ]
   },
@@ -1689,6 +1690,15 @@
    ],
    "source": [
     "sns.histplot(data=df_uzywane, x='Cena', hue='Wersja Iphona')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24bd2842",
+   "metadata": {},
+   "source": [
+    "### Eliminating Extreme Values for iPhone Prices on OLX\n",
+    "This code snippet aims to eliminate extreme values from the 'price' column by calculating the mean and standard deviation of the data and then selecting only those rows that have prices within 3 standard deviations from the mean. The reason for doing this is that there is a large range of prices for iPhones on OLX, and eliminating extreme values will help to focus on the more common and reasonable prices.\n"
    ]
   },
   {
@@ -1929,19 +1939,15 @@
     }
    ],
    "source": [
-    "# Wyznaczanie średniej i odchylenia standardowego dla kolumny 'price'\n",
     "mean = df_uzywane['Cena'].mean()\n",
     "std = df_uzywane['Cena'].std()\n",
     "\n",
-    "# Wyznaczanie dolnego i górnego progu cen\n",
     "lower_bound = mean - 3 * std\n",
     "upper_bound = mean + 3 * std\n",
     "\n",
-    "# Wybieranie wierszy, które zawierają ceny mieszczące się między dolnym a górnym progiem\n",
     "valid_rows = (df_uzywane['Cena'] >= lower_bound) & (df_uzywane['Cena'] <= upper_bound)\n",
     "df_uzywane = df_uzywane[valid_rows]\n",
     "\n",
-    "# Wyświetlanie wyniku\n",
     "df_uzywane"
    ]
   },
@@ -1979,6 +1985,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81fa367d",
+   "metadata": {},
+   "source": [
+    "### Histogram and boxplot of the 5 most common iPhone versions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "b854354a",
@@ -2008,13 +2022,8 @@
     }
    ],
    "source": [
-    "# Wyznacz częstości występowania każdej wersji i wybierz 5 najczęściej występujących\n",
     "top_versions = df_uzywane['Wersja Iphona'].value_counts().head(5).index.tolist()\n",
-    "\n",
-    "# Odfiltruj wiersze w ramce danych, aby wyświetlać tylko te zawierające 5 najczęściej występujących wersji\n",
     "filtered_df = df_uzywane[df_uzywane['Wersja Iphona'].isin(top_versions)]\n",
-    "\n",
-    "# Utwórz wykres histogramu dla wierszy spełniających warunek filtrowania\n",
     "sns.histplot(data=filtered_df, x='Cena', hue='Wersja Iphona')"
    ]
   },
@@ -2071,31 +2080,25 @@
     }
    ],
    "source": [
-    "# Wyznacz wersje iPhone'a\n",
     "iphone_versions = df_uzywane['Wersja Iphona'].unique()\n",
     "\n",
-    "# Ustaw liczbę wierszy i kolumn wykresów\n",
     "nrows = 8\n",
     "ncols = 2\n",
     "\n",
-    "# Ustaw rozmiar rysunku\n",
     "fig, axs = plt.subplots(nrows=nrows, ncols=ncols, figsize=(15, 25))\n",
     "\n",
-    "# Iteruj po wersjach iPhone'a i generuj wykresy histogramów\n",
+    "\n",
     "for i, version in enumerate(iphone_versions):\n",
     "    row = i // ncols\n",
     "    col = i % ncols\n",
     "    \n",
-    "    # Wybierz wiersze odpowiadające danej wersji iPhone'a\n",
     "    version_df = df_uzywane.loc[df_uzywane['Wersja Iphona'] == version]\n",
     "    \n",
-    "    # Wygeneruj wykres histogramu dla ceny\n",
     "    sns.histplot(data=version_df, x='Cena', hue='Stan', kde=False, bins=50, ax=axs[row, col])\n",
     "    axs[row, col].set_title(f\"Histogram dla {version}\")\n",
     "    axs[row, col].set_xlabel(\"Cena\")\n",
     "    axs[row, col].set_ylabel(\"Liczba wystąpień\")\n",
     "\n",
-    "# Wyświetl rysunek\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -2353,44 +2356,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b892de5",
+   "id": "f95294f2",
    "metadata": {},
    "source": [
-    "### Usuniecie nadmiarowych danych\n",
-    "Z uwagi iż za niskie ceny jak i za wysokie mogą psuć analize postanowiłem usunąc wyniki nie mieszczące się w 2 odchylenia standardowych."
+    "\n",
+    "### Eliminating redundant data\n",
+    "This code snippet aims to filter out invalid data from a DataFrame containing information about used iPhones being sold on OLX. The data is filtered for each iPhone version separately based on the mean and standard deviation of the 'Cena' column (price in PLN). The mean and standard deviation are calculated for each version separately to account for differences in pricing between different iPhone models. The filter selects only rows with 'Używane' (used) status, and with prices within two standard deviations from the mean. The filtered data for each version is then concatenated into a new DataFrame called 'df_valid'.\n",
+    "\n",
+    "By selecting only rows with prices within two standard deviations from the mean, we aim to eliminate extreme values and focus on the more common and reasonable prices. This approach allows us to remove redundant and irrelevant data and achieve a more accurate representation of the prices of used iPhones being sold on OLX. The percentage of the data set that is retained after applying this filter may vary depending on the specific iPhone version, but it is typically around 95-98%. The decision to use two standard deviations from the mean is based on the assumption that the data follows a normal distribution. By using this approach, we can achieve a better balance between retaining a sufficient amount of data while eliminating extreme values that could negatively impact our analysis."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92867a73",
+   "id": "40739626",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tworzenie pustej listy dla wyników\n",
     "valid_dfs = []\n",
     "\n",
-    "# Iteracja po wersjach iPhone'a i wyznaczanie prógów dla każdej z nich\n",
     "for version in df_uzywane['Wersja Iphona'].unique():\n",
-    "    # Wybieranie wierszy odpowiadających danej wersji iPhone'a\n",
     "    df_version = df_uzywane.loc[df_uzywane['Wersja Iphona'] == version]\n",
-    "    \n",
-    "    # Wyznaczanie średniej i odchylenia standardowego dla kolumny 'Cena'\n",
+    "\n",
     "    mean = df_version.loc[df_version['Stan'] == 'Używane', 'Cena'].mean()\n",
     "    std = df_version.loc[df_version['Stan'] == 'Używane', 'Cena'].std()\n",
-    "    \n",
-    "    # Wyznaczanie dolnego i górnego progu cen\n",
     "    lower_bound = mean - 2 * std\n",
     "    upper_bound = mean + 2 * std\n",
-    "    \n",
-    "    # Wybieranie wierszy, które zawierają ceny mieszczące się między dolnym a górnym progiem\n",
     "    valid_rows = (df_version['Stan'] != 'x') & (df_version['Stan'] == 'Używane') & (df_version['Cena'] >= lower_bound) & (df_version['Cena'] <= upper_bound)\n",
     "    valid_df = df_version[valid_rows]\n",
-    "    \n",
-    "    # Dodawanie wyniku do listy\n",
     "    valid_dfs.append(valid_df)\n",
     "\n",
-    "# Łączenie wyników w jeden DataFrame\n",
     "df_valid = pd.concat(valid_dfs)"
    ]
   },
@@ -2637,12 +2632,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b896f1e",
+   "id": "eccee7f0",
    "metadata": {},
    "source": [
-    "## Etap 3 Prezentacja wyników\n",
+    "## Stage 3 Results presentation\n",
     "\n",
-    "Zaprezentowanie historgramów do każdej wersji iphona jak i boxplota"
+    "Presenting histograms for each iPhone version as well as a box plot."
    ]
   },
   {
@@ -2665,31 +2660,22 @@
     }
    ],
    "source": [
-    "# Wyznacz wersje iPhone'a\n",
     "iphone_versions = df_valid['Wersja Iphona'].unique()\n",
     "\n",
-    "# Ustaw liczbę wierszy i kolumn wykresów\n",
     "nrows = 8\n",
     "ncols = 2\n",
     "\n",
-    "# Ustaw rozmiar rysunku\n",
     "fig, axs = plt.subplots(nrows=nrows, ncols=ncols, figsize=(15, 25))\n",
     "\n",
-    "# Iteruj po wersjach iPhone'a i generuj wykresy histogramów\n",
     "for i, version in enumerate(iphone_versions):\n",
     "    row = i // ncols\n",
     "    col = i % ncols\n",
-    "    \n",
-    "    # Wybierz wiersze odpowiadające danej wersji iPhone'a\n",
     "    version_df = df_valid.loc[df_valid['Wersja Iphona'] == version]\n",
-    "    \n",
-    "    # Wygeneruj wykres histogramu dla ceny\n",
     "    sns.histplot(data=version_df, x='Cena', kde=False, bins=30, ax=axs[row, col])\n",
-    "    axs[row, col].set_title(f\"Histogram dla {version}\")\n",
-    "    axs[row, col].set_xlabel(\"Cena\")\n",
-    "    axs[row, col].set_ylabel(\"Liczba wystąpień\")\n",
+    "    axs[row, col].set_title(f\"Histogram for {version}\"\n",
+    "    axs[row, col].set_xlabel(\"Price\")\n",
+    "    axs[row, col].set_ylabel(\"Number of occurrences\")\n",
     "\n",
-    "# Wyświetl rysunek\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -2733,19 +2719,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "11fdc5c6",
+   "cell_type": "markdown",
+   "id": "e77305f5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Ustawienie liczby najtańszych produktów, które mają być wyświetlone dla każdej wersji iPhone'a\n",
-    "n = 10\n",
+    "### Suggesting Bargain Opportunities\n",
+    "At the end of the analysis, we have ranked the 10 cheapest iPhone devices for each version, based on the filtered data. This ranking can be useful for those looking for a bargain deal on a used iPhone. It is important to note that the ranking is based on price alone and does not take into account other factors such as the condition of the device or the reputation of the seller.\n",
     "\n",
-    "# Zgrupowanie po kolumnie 'Wersja Iphona' i wybranie 10 najtańszych produktów dla każdej grupy\n",
-    "df_top_10 = (df_valid.groupby('Wersja Iphona')\n",
-    "             .apply(lambda x: x.nsmallest(n, 'Cena'))\n",
-    "             .reset_index(drop=True))\n"
+    "Overall, this ranking can be a useful starting point for those in the market for a used iPhone, but it should not be the sole factor in the decision-making process."
    ]
   },
   {
@@ -2980,15 +2961,11 @@
     }
    ],
    "source": [
-    "# Ustawienie liczby najtańszych produktów, które mają być wyświetlone dla każdej wersji iPhone'a\n",
     "n = 10\n",
-    "\n",
-    "# Zgrupowanie po kolumnie 'Wersja Iphona' i wybranie 10 najtańszych produktów dla każdej grupy\n",
     "df_top_10 = (df_valid.groupby('Wersja Iphona')\n",
     "             .apply(lambda x: x.nsmallest(n, 'Cena'))\n",
     "             .reset_index(drop=True))\n",
     "\n",
-    "# Wyświetlenie top 10 linków dla każdej wersji iPhone'a\n",
     "for model in df_top_10['Wersja Iphona'].unique():\n",
     "    print(f\"\\nTop {n} najtańszych produktów dla {model}:\\n\")\n",
     "    for index, row in df_top_10[df_top_10['Wersja Iphona'] == model].iterrows():\n",
